# tiny-llm-proxy-local

./: .gitignore  AGENTS.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260703_0001_web_chat_skill_runtime.py
app/: config.py  main.py  seed.py
app/chat/: __init__.py  router.py  schemas.py  service.py
app/context/: __init__.py  assembler.py  trimmer.py
app/db/: models.py  repositories.py  session.py
app/memory/: __init__.py  backends.py  schemas.py  service.py
app/model_gateway/: client.py  schemas.py
app/skills/: admin.py  registry.py  router.py  schemas.py
app/web/: __init__.py  index.html  router.py
docs/plans/: 2026-06-25-llm-proxy-phase-1.md  2026-07-03-web-chat-skill-runtime-smoke.md
docs/superpowers/plans/: 2026-07-03-web-chat-skill-runtime-implementation.md
docs/superpowers/specs/: 2026-06-24-llm-proxy-design.md  2026-07-03-web-chat-skill-runtime-design.md
tests/: test_app_config.py  test_chat_router.py  test_chat_service.py  test_context.py  test_db_models.py  test_memory_service.py  test_model_gateway.py  test_seed.py  test_skills.py  test_web_page.py
