[project]
name = "llm-proxy"
version = "0.1.0"
description = "FastAPI-based LLM proxy with Anthropic API facade and DeepSeek backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncmy>=0.2.9",
    "httpx>=0.27.0",
    "onnxruntime<1.24; python_version < '3.11'",
    "chromadb>=0.5.0",
    "pydantic-settings>=2.5.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "freezegun>=1.5.0",
]

[tool.ruff]
select = ["E", "W", "F", "I", "B", "UP"]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
